--- a/app/assets/components/ui-elements/stacked-pdf-reader.html
+++ b/app/assets/components/ui-elements/stacked-pdf-reader.html
@@ -5,7 +5,7 @@
             padding: 2px;
             height: 100%;
             width: 100%;
-            overflow-y: scroll;
+            overflow-y: visible;
         }
         #pages{
             width:100%;
