--- a/app/assets/components/ui-elements/oj-review-page-header.html
+++ b/app/assets/components/ui-elements/oj-review-page-header.html
@@ -4,110 +4,18 @@
   <style>
 
         :host {
-            box-sizing:    border-box;;
         }
 
         .wrap {
             @apply(--layout-relative);
             @apply(--layout-horizontal);
-        }
-
-        .left {
             background:    rgb(230, 230, 230);;
-            padding:       20px 20px 0 20px;
-            @apply(--layout);
-            @apply(--layout-flex);
-            @apply(--layout-vertical);
+            padding:       2px 20px 2px 20px;
         }
 
-        #title-row {
-        }
         .title {
             color:     #7d7d7d;
             font-size: 20px;
-        }
-        .inline-status {
-            color:       #888;
-            font-size:   14px;
-            font-weight: 400;
-        }
-
-        paper-dropdown-menu {
-            font-size:    12px;
-            border:       none;
-            padding:      0;
-            margin:       0;
-            padding-left: 4px;
-            width:        90px;
-            color:        #9a9a9a;
-            top:          -14px;
-        }
-        paper-item {
-            font-size: 12px;
-            margin:    0;
-            padding:   0;
-        }
-        paper-item::shadow .button-content {
-            padding: 0 0 0 4px;
-        }
-        paper-dropdown-menu::shadow iron-icon {
-            margin: -4px;
-        }
-        paper-dropdown-menu::shadow #arrow {
-            position:  absolute;
-            left:      0;
-            top:       3px;
-            color: #9a9a9a;
-        }
-        paper-dropdown-menu::shadow #label {
-            position:  absolute;
-            left:      16px;
-            top:       4px;
-        }
-        paper-listbox {
-            margin: 0;
-        }
-
-        #assignments-row {
-            margin: 8px 0;
-        }
-
-        #status-row {
-            margin-top: 12px;
-        }
-
-        .status-block {
-            border-right: solid 1px #bbb;
-            padding: 0 20px 0 0;
-            color: #7d7d7d;
-        }
-        .status-block .label {
-            font-size: 12px;
-            font-weight: 700;
-        }
-        .status-block .status {
-            font-size:   14px;
-            font-weight: 400;
-        }
-
-        .count-block {
-            border-right: solid 1px #bbb;
-            padding: 0 20px;
-            color: #7d7d7d;
-        }
-        .count-block .count {
-            font-size:    36px;
-            float:        left;
-            margin:       -4px 4px 0 0;
-        }
-        .count-block .label {
-            font-size: 14px;
-            font-weight: 400;
-            float:     left;
-        }
-
-        oj-review-page-actions {
-            margin-left: 8px;
         }
 
         .progress {
@@ -118,118 +26,17 @@
             bottom:   0;
         }
 
-        .right {
-            background: white;
-            width:      353px; /* Match width of annotations list */
-            @apply(--layout);
-            @apply(--layout-vertical);
-            @apply(--layout-self-stretch);
-        }
-
-        #add-paper-annotation {
-            box-sizing:    border-box;
-            margin:        12px 18px 0 12px;
-            height:        60px;
-            border-bottom: solid 2px #eee;
-        }
-        #add-paper-annotation paper-button {
-            font-size:     12px;
-            color:         #295675;
-            line-height:   15px;
-            text-align:    center;
-            border:        1px solid #295675;
-            border-radius: 5px;
-            background:    white;
-            box-shadow:    0 4px 0 0 rgba(218, 218, 218, 0.1);
-            overflow:      hidden;
-            width:         100%;
-        }
-        #add-paper-annotation .icon-wrapper {
-            position:   absolute;
-            top:        0;
-            left:       0;
-            height:     40px;
-            width:      40px;
-            background: #295675;
-        }
-        #add-paper-annotation .text-wrapper {
-            margin-left: 40px;
-        }
-        #add-paper-annotation paper-button iron-icon {
-            color:    white;
-            margin:   4px 0 0 2px;
-        }
-
     </style>
 
   <template>
 
       <div class="wrap">
 
-          <div class="left" >
-              <div class="title-row" class="layout horizontal">
+        <div class="title flex">{{paper.title}}</div>
 
-                  <div class="title flex">
-                      <span>{{paper.title}}</span>
-                      <template is="dom-if" if="{{showStateInTitle(paper, paper.state, paper.can_view_annotations)}}">
-                          <span class="inline-status">&nbsp;(<span>{{capitalize(paper.state)}}</span>)</span>
-                      </template>
-                  </div>
-
-                  <div class="self-start">
-                      <paper-dropdown-menu on-iron-select="versionSelected">
-                          <paper-listbox id="versionMenu" class="dropdown-content dropdown" attr-for-selected="version" selected="{{paper.typed_provider_id}}">
-                              <template is="dom-repeat" items="{{paper.versions}}" as="version">
-                                  <paper-item version="{{version.typed_provider_id}}">{{providerPart(version.typed_provider_id)}}</paper-item>
-                              </template>
-                          </paper-listbox>
-                      </paper-dropdown-menu>
-                  </div>
-
-              </div>
-
-              <div id="assignments-row">
-                  <oj-assigned-users-list paper="{{paper}}" user="{{user}}"></oj-assigned-users-list>
-              </div>
-
-              <template is="dom-if" if="{{showBottomDetails(paper, paper.state, paper.can_view_annotations)}}">
-                  <div id="status-row" class="layout horizontal">
-
-                      <div class="status-block">
-                          <div class="label">Status:</div>
-                          <div class="status">{{capitalize(paper.state)}}</div>
-                      </div>
-
-                      <template is="dom-if" if="{{showCounts(paper, paper.state, paper.can_view_annotations)}}">
-                          <div class="count-block">
-                              <div class="count">{{countOpen}}</div>
-                              <div class="label">Open<br>Issues</div>
-                          </div>
-                      </template>
-
-                      <oj-review-page-actions class="layout flex" user="{{user}}" paper="{{paper}}"></oj-review-page-actions>
-
-                  </div>
-              </template>
-
-          </div>
-
-          <template is="dom-if" if="{{paper.can_edit_annotations}}">
-              <div class="right">
-
-                  <div id="add-paper-annotation">
-                      <paper-button raised="" on-tap="addPaperAnnotation">
-                          <div class="icon-wrapper"><iron-icon icon="icons:add"></iron-icon></div>
-                          <div class="text-wrapper">Add a comment about the entire paper</div>
-                      </paper-button>
-                  </div>
-
-              </div>
-          </template>
-
-          <template is="dom-if" if="{{showProgress(loadProgress)}}">
-              <paper-progress class="progress" value="{{loadProgress}}"></paper-progress>
-          </template>
+        <template is="dom-if" if="{{showProgress(loadProgress)}}">
+          <paper-progress class="progress" value="{{loadProgress}}"></paper-progress>
+        </template>
 
       </div>
 
@@ -240,52 +47,12 @@
       is: 'oj-review-page-header',
 
       properties: {
-        annotations: {
-          type:     Array,
-          notify:   true,
-          observer: 'annotationsChanged'
+        loadProgress: {
+            notify: true
         },
-        loadProgress: { notify: true },
-        paper: { notify: true },
-        user: { notify: true }
-      },
-
-      annotationsChanged: function () {
-        this.updateCounts();
-      },
-
-      updateCounts: function () {
-        if (!this.annotations)
-          return;
-        this.countNew = this.annotations.filter(function (annotation) {
-          return annotation.new;
-        }).length;
-        this.countClosed = this.annotations.filter(function (annotation) {
-          return annotation.state == 'resolved';
-        }).length;
-        this.countOpen = this.annotations.length - this.countClosed - this.countNew;
-      },
-
-      versionSelected: function (event, detail) {
-        var id = detail.item.version;
-        if (id != this.paper.typed_provider_id)
-          this.fire('review', id);
-      },
-
-      addPaperAnnotation: function (event, detail) {
-        this.fire('add-paper-annotation');
-      },
-
-      showBottomDetails: function(paper) {
-        return paper && paper.can_view_annotations && paper.state != 'accepted';
-      },
-
-      showStateInTitle: function(paper) {
-        return paper && !paper.can_view_annotations && paper.state != 'accepted';
-      },
-
-      showCounts: function(paper) {
-        return paper.state != 'submitted';
+        paper: {
+            notify: true
+        }
       },
 
       showProgress: function(loadProgress) {
@@ -293,8 +60,6 @@
       },
 
       behaviors: [
-          Oj.globalExpressions,
-          Oj.paperHelpers
       ]
 
     });
