--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -1,5 +1,6 @@
-$default_font: 'Montserrat', sans-serif;
-//$default_font:    "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$default_font:  Roboto;
+$default_color: #192023;
+
 
 //Polymer doesn't seem to like it if this file is empty
 body {
