--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -19,7 +19,7 @@
               --paper-header-panel-shadow: {
                   height:     6px;
                   bottom:     -6px;
-                  box-shadow: inset 0 5px 6px -3px rgba(0, 0, 0, 0.4);
+                  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25)
                   z-index:    1000;
               };
           }
@@ -28,15 +28,7 @@
               border-right: 1px solid #ccc;
           }
 
-          paper-toolbar {
-              height: 70px;
-              color: #fff;
-              font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-              background-color: rgb(51, 85, 117);
-          }
           oj-toolbar {
-              height: 100%;
-              width:  100%;
           }
 
           :host /deep/ #mainContainer {
