--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -3,9 +3,23 @@
   <template>
 
       <style>
+
           :host {
               @apply(--layout);
               @apply(--layout-fit);
+              background:  white;
+              font-family: Neuton;
+              color:       #192023;
+          }
+
+          #progress {
+              position: absolute;
+              width:    100%;
+              top:      0;
+              left:     0;
+              right:    0;
+              --paper-progress-container-color: transparent;
+              --paper-progress-active-color:    #00cc00;
           }
 
           #scroller {
@@ -28,60 +42,62 @@
           }
 
           #rhs {
-              width: 350px;
-              left: -3px;
+              box-sizing:    border-box;
+              width:         350px;
+              height:        100%;
+              left:          -3px;
           }
 
           #rhs-tabs {
               position:         fixed;
-              top:              260px;
-              right:            -1px;
-              transform-origin: right top;
-              transform:        rotate(90deg);
+              top:              145px;
+              right:            0;
               z-index:          100;
           }
 
-          #rhs-tabs span {
-              display:    inline-block;
-              float:      left;
-              cursor:     pointer;
-              background: white;
-              border:     1px solid black;
-              padding:    2px 4px;
-              color:      #ccc;
+          #rhs-tabs div {
+              width:         36px;
+              height:        38px;
+              margin-bottom: 2px;
+              cursor:        pointer;
+              box-shadow:    0 3px 15px 0 rgba(0, 0, 0, 0.08);
+              font-family:   "Roboto Slab";
+              color:         #cfcfcf;
+              background:    white center/20px no-repeat;
+              font-size:     20px;/* Approximation due to font substitution */
+              font-weight:   700;
+              line-height:   42px;/* Approximation due to font substitution */
+              text-align:    center;
+          }
+          #rhs-tabs div.active {
+              cursor:        default;
+              color:         #54d1b8;
+          }
+          #rhs-tabs div:hover {
+              color:         #54d1b8;
           }
 
-          #rhs-tabs span:hover {
-              color:       #8f8;
+          #rhs-tabs #tab-info::before {
+              content: 'i';
+          }
+          #rhs-tabs #tab-edits {
+              background-image: url(/assets/paper_edits.png)
+          }
+          #rhs-tabs #tab-edits.active {
+              background-image: url(/assets/paper_edits-active.png)
+          }
+          #rhs-tabs #tab-edits:hover {
+              background-image: url(/assets/paper_edits-active.png)
           }
 
-          #rhs-tabs span:first-child {
-              border-style: solid none solid solid;
+          oj-review-paper-info, oj-annotation-list {
+              box-sizing:    border-box;
+              padding-right: 38px; /* Width of tabs */
+              background:    #eeeeee;
           }
 
-          #rhs-tabs span.selected {
-              cursor:      default;
-              font-weight: bold;
-              color:       #cfc;
-          }
-
-          oj-review-page-header {
+          oj-review-paper-info {
               position:     fixed;
-              z-index:      1;
-              box-sizing:   border-box;
-              width:        100%;
-          }
-
-          oj-review-paper-stats, oj-annotation-list {
-              width:        350px;
-              box-sizing:   border-box;
-              margin-right: 12px;
-          }
-
-          oj-review-paper-stats {
-              position:     fixed;
-              padding-left: 6px;
-              padding-top:  44px;
               height:       100%;
           }
 
@@ -91,11 +107,9 @@
 
       </style>
 
-      <div id="scroller" class="layout vertical">
+      <paper-progress id="progress" hidden$="{{!showProgress(loadProgress)}}" value="{{loadProgress}}"></paper-progress>
 
-        <oj-review-page-header id="header"
-                               paper="{{paper}}"
-                               load-progress="{{loadProgress}}"></oj-review-page-header>
+      <div id="scroller" class="layout vertical">
 
         <template is="dom-if" if="{{paper}}">
           <div id="main" class="layout horizontal">
@@ -111,19 +125,19 @@
             <div id="rhs">
 
                 <div id="rhs-tabs" hidden$="{{!paper.can_view_annotations}}">
-                    <span id="tab-stats" class$="{{tabClass('stats', selectedTab)}}" on-tap="tabTap">Stats</span>
-                    <span id="tab-edits" class$="{{tabClass('edits', selectedTab)}}" on-tap="tabTap">Edits</span>
+                    <div id="tab-info"  class$="{{tabClass('info',  activeTab)}}" title="Info" on-tap="tabTap"></div>
+                    <div id="tab-edits" class$="{{tabClass('edits', activeTab)}}" title="Edits" on-tap="tabTap"></div>
                 </div>
 
-                <oj-review-paper-stats hidden$="{{tabHidden('stats', selectedTab)}}"
+                <oj-review-paper-info  hidden$="{{tabHidden('info', activeTab)}}"
                                        user="{{currentUser}}"
                                        paper="{{paper}}"
                                        annotations="{{annotations}}">
-                      ></oj-review-paper-stats>
+                      ></oj-review-paper-info>
 
                 <template is="dom-if" if="{{paper.can_view_annotations}}">
                     <oj-annotation-list id="annotation_list"
-                                        hidden$="{{tabHidden('edits', selectedTab)}}"
+                                        hidden$="{{tabHidden('edits', activeTab)}}"
                                         paper="{{paper}}"
                                         annotations="{{annotations}}"
                                         first-page-offset="{{annotationFirstPageOffset}}"
@@ -178,14 +192,14 @@
                          notify: true,
                          value:  20
                      },
-        selectedTab: {
+        activeTab:   {
                          type:  String,
                          notify: true,
-                         value:  'stats'
+                         value:  'info'
                      }
       },
 
-      /**** external API *********/
+      /**** External API *********/
 
       getSectionName: function() {
         return 'none';
@@ -205,6 +219,10 @@
       },
 
       /******************************/
+
+      showProgress: function(loadProgress) {
+          return loadProgress < 100;
+      },
 
       pdfClientChanged: function(event, detail) {
           this.pdfClientHeight = detail.clientHeight;
@@ -241,15 +259,15 @@
       },
 
       tabClass: function(tabName) {
-          return tabName == this.selectedTab ? 'selected' : '';
+          return tabName == this.activeTab ? 'active' : '';
       },
 
       tabTap: function(event, detail) {
-        this.selectedTab = event.target.id.slice(4);
+        this.activeTab = event.target.id.slice(4);
       },
 
       tabHidden: function(tabName) {
-        return tabName != this.selectedTab;
+        return tabName != this.activeTab;
       },
 
       behaviors: [
