--- a/app/assets/components/ui-elements/oj-assigned-users-list.html
+++ b/app/assets/components/ui-elements/oj-assigned-users-list.html
@@ -1,41 +1,14 @@
 <dom-module id="oj-assigned-users-list">
 
-  <style>
-
-        oj-user-tag, oj-user-lookup {
-        }
-
-        .user-block     {
-
-        }
-
-        .user-header    {
-        }
-
-        .user-separator {
-            border: 1px inset;
-            box-sizing: border-box;
-            color: gray;
-            margin-block-end: 0.5em;
-            margin-block-start: 0.5em;
-            margin-inline-end: auto;
-            margin-inline-start: auto;
-        }
-
-    </style>
-
   <template>
 
       <div class="user-block">
           <div class="user-header">Submittor</div>
           <template is="dom-repeat"
-                    items="{{paper.assigned_users}}"
-                    sort="sortAssignments"
+                    items="{{sortedAssignments}}"
                     filter="isSubmittor"
                     as="assignment">
-              <oj-user-tag assignment="{{assignment}}"
-                           showcolor="{{!submitted}}"
-                           tagcolor="{{userColor(assignment)}}"></oj-user-tag>
+              <oj-user-tag assignment="{{assignment}}"></oj-user-tag>
           </template>
       </div>
 
@@ -44,13 +17,10 @@
       <div class="user-block">
           <div class="user-header">Editor</div>
           <template is="dom-repeat"
-                    items="{{paper.assigned_users}}"
-                    sort="sortAssignments"
+                    items="{{sortedAssignments}}"
                     filter="isEditor"
                     as="assignment">
-              <oj-user-tag assignment="{{assignment}}"
-                           showcolor="{{!submitted}}"
-                           tagcolor="{{userColor(assignment)}}"></oj-user-tag>
+              <oj-user-tag assignment="{{assignment}}"></oj-user-tag>
           </template>
       </div>
 
@@ -59,13 +29,10 @@
       <div class="user-block">
           <div class="user-header">Reviewers</div>
           <template is="dom-repeat"
-                    items="{{paper.assigned_users}}"
-                    sort="sortAssignments"
+                    items="{{sortedAssignments}}"
                     filter="isReviewer"
                     as="assignment">
               <oj-user-tag assignment="{{assignment}}"
-                           showcolor="{{!submitted}}"
-                           tagcolor="{{userColor(assignment)}}"
                            showcompleted="{{showCompleted}}"
                            removable="{{editable}}"
                            on-remove-user="removeReviewer"></oj-user-tag>
@@ -74,8 +41,8 @@
           <oj-user-tag assignment="{{anonymousReviewersTag(paper.assigned_users)}}"></oj-user-tag>
 
           <template is="dom-if" if="{{editable}}">
-              <div>Add a reviewer:</div>
-              <oj-user-lookup placeholder="Add Reviewer"
+              <div class=add_reviewer>+ Add a Reviewer:</div>
+              <oj-user-lookup placeholder=" + Add a Reviewer"
                               on-user-selected="addReviewer"
                               on-filter-suggestions="filterReviewerList"></oj-user-lookup>
           </template>
@@ -85,18 +52,70 @@
     <json-request id="addReviewer"    method="post"   on-success="updateReviewers"></json-request>
     <json-request id="removeReviewer" method="delete" on-success="updateReviewers"></json-request>
 
+      <style>
+
+          .user-block     {
+          }
+
+          .user-header    {
+              font-family: Roboto;
+              color:       #c0cbcf;
+              font-size:   20px;/* Approximation due to font substitution */
+              font-weight: 500;
+          }
+
+          oj-user-tag, oj-user-lookup {
+          }
+
+          .user-separator {
+              margin:              12px 0;
+              box-sizing:          border-box;
+              border-top:          1px solid #a0a0a0;
+              height:              0;
+              width:               100%;
+          }
+
+          .add_reviewer {
+              margin-top:  12px;
+              font-family: Roboto;
+              color:       #54d1b8;
+              font-size:   20px;/* Approximation due to font substitution */
+              font-weight: 500;
+          }
+
+      </style>
+
+
   </template>
+
   <script>
     Polymer({
       is: 'oj-assigned-users-list',
 
       properties: {
-        user:           { notify: true },
-        paper:          { notify: true },
-        submitted:      { notify: true },
-        under_review:   { notify: true },
-        show_completed: { notify: true },
-        editable:       { notify: true }
+        user:           {
+            notify: true
+        },
+        paper:          {
+            notify: true
+        },
+        submitted:      {
+            notify: true
+        },
+        underReview:   {
+            notify: true
+        },
+        showCompleted: {
+            notify: true
+        },
+        editable:       {
+            notify: true
+        },
+        sortedAssignments: {
+            type:   Array,
+            notify: true,
+            computed: 'sortAssignments(paper.assigned_users)'
+        }
       },
 
       observers: [
@@ -106,8 +125,8 @@
       modelsChanged: function() {
         var can_edit        = this.user && ( this.user.admin || this.hasRole(this.paper, 'editor') );
         this.submitted      = this.paper && this.paper.state == 'submitted';
-        this.under_review   = this.paper && this.paper.state == 'under_review';
-        this.show_completed = this.paper && can_edit && (this.paper.state == 'under_review' || this.paper.state == 'review_completed');
+        this.underReview    = this.paper && this.paper.state == 'under_review';
+        this.showCompleted  = this.paper && can_edit && (this.paper.state == 'under_review' || this.paper.state == 'review_completed');
         this.editable       = this.submitted && can_edit;
       },
 
@@ -131,6 +150,8 @@
       },
 
       filterReviewerList: function(event, suggestions) {
+          event.result = suggestions;
+          return;
         var paper = this.paper;
         event.result = suggestions.filter(function (item) {
           for (var i = 0; i < paper.assigned_users.length; i++) {
