--- a/app/assets/components/ui-elements/oj-toolbar.html
+++ b/app/assets/components/ui-elements/oj-toolbar.html
@@ -1,88 +1,103 @@
 <dom-module id="oj-toolbar">
-  <style>
 
-      [tool] {
-        height: 100%;
-      }
-
-      paper-icon-button {
-          margin-top:  6px;
-      }
-
-      .title {
-          color:          #fff;
-          font-size:      18px;
-          font-style:     normal;
-          font-weight:    400;
-          white-space:    nowrap;
-          height:         25px;
-          margin-top:     22px;
-          text-transform: uppercase;
-      }
-
-      #search {
-          width:          320px;
-          background:     rgb(67, 111, 153);
-          border:         solid 1px #ccc;
-          border-radius:  8px;
-          color:          white;
-          font-size:      16px;
-          padding-left:   16px;
-          padding-top:    4px;
-          padding-bottom: 4px;
-          height:         25px;
-          margin-top:     18px;
-          margin-right:   18px;
-      }
-      #search:hover, #search:focus {
-          background: rgb(73, 121, 167);
-      }
-
-      ::-webkit-input-placeholder {
-          color: silver;
-      }
-      :-moz-placeholder { /* Firefox 18- */
-          color: silver;
-      }
-      ::-moz-placeholder {  /* Firefox 19+ */
-          color: silver;
-      }
-      :-ms-input-placeholder {
-          color: silver;
-      }
-
-      #search-icon {
-          position: relative;
-          left:     334px;
-          top:      24px;
-          color:    #ccc;
-      }
-
-      oj-user-login {
-          margin-top: 20px;
-      }
-
-    </style>
   <template>
 
-        <div tool="" class="layout flex horizontal">
+      <style>
+
+          :host {
+          }
+
+          .toolbar {
+              @apply(--layout-horizontal);
+              @apply(--layout-flex);
+              @apply(--layout-center);
+
+              width:             100%;
+              height:            108px;
+              box-sizing:        border-box;
+              padding:           0 53px;
+
+              background-color:  #192023;
+              font-family:       Roboto;
+          }
+
+          paper-icon-button {
+              margin-top:  6px;
+          }
+
+          .title {
+              @apply(--layout-flex);
+              font-family: Neuton;
+              color:       #ffffff;
+              font-size:   45px;/
+              font-weight: 400;
+          }
+
+          #search {
+              width:          320px;
+              background:     #192023;
+              border:         solid 1px #ccc;
+              border-radius:  8px;
+              color:          white;
+              font-size:      16px;
+              padding-left:   6px;
+              height:         25px;
+          }
+          #search:hover, #search:focus {
+              background:     rgb(71, 90, 99);
+          }
+
+          ::-webkit-input-placeholder {
+              color: silver;
+          }
+          :-moz-placeholder { /* Firefox 18- */
+              color: silver;
+          }
+          ::-moz-placeholder {  /* Firefox 19+ */
+              color: silver;
+          }
+          :-ms-input-placeholder {
+              color: silver;
+          }
+
+          #search-icon {
+              position: relative;
+              left:     -26px;
+              top:      2px;
+              color:    #ccc;
+          }
+
+          oj-user-login {
+              margin-left: -16px;
+          }
+
+      </style>
+
+        <div class="toolbar disable-selection">
             <paper-icon-button icon="icons:menu" on-tap="toggleDrawer" hidden$="{{!narrow}}"></paper-icon-button>
-            <span class="title flex">The Open Journal</span>
-            <iron-icon id="search-icon" icon="icons:search"></iron-icon>
+            <span class="title">The Open Journal</span>
             <input id="search" is="iron-input" placeholder="Search" on-keyup="onSearchKeyUp">
+            <iron-icon id="search-icon" icon="icons:search"></iron-icon>
             <oj-user-login current-user="{{currentUser}}"></oj-user-login>
         </div>
 
     <oj-current-user on-user="onUser"></oj-current-user>
 
   </template>
+
   <script>
     Polymer({
       is: 'oj-toolbar',
+
       properties: {
-        currentUser: { notify: true },
-        narrow: { notify: true }
+        currentUser: {
+            notify: true
+        },
+        narrow: {
+            notify: true
+        }
       },
+
       onSearchKeyUp: function (event) {
         if (event.keyCode == 13) {
           event.preventDefault();
@@ -92,13 +107,16 @@
             this.fire('go', '/search?q=' + encodeURIComponent(value));
         }
       },
+
       onUser: function(event, detail) {
           var user = detail.name ? detail : null;
           this.currentUser = user;
       },
+
       toggleDrawer: function () {
         this.fire('toggle-drawer');
       }
+
     });
   </script>
 </dom-module>
