--- a/app/assets/components/ui-elements/oj-user-tag.html
+++ b/app/assets/components/ui-elements/oj-user-tag.html
@@ -1,54 +1,14 @@
 <dom-module id="oj-user-tag">
-  <style>
-
-      :host {
-        display: inline-block;
-        background-color:black;
-        color: white;
-        box-sizing: border-box;
-        padding: 2px 10px;
-        border-radius: 6px;
-      }
-
-      :host([showcolor]) {
-          padding-right: 4px;
-      }
-
-      .remover {
-        color:white;
-        text-decoration:none;
-      }
-
-      .color {
-          display: inline-block;
-          box-sizing: border-box;;
-          background-color: white;
-          width:  12px;
-          height: 12px;
-          /*border-radius: 6px;*/
-          margin: 0;
-          vertical-align: middle;
-      }
-
-      iron-icon {
-          width:          16px !important;
-          height:         16px !important;
-          vertical-align: -2px !important;
-          background:     #e4e4e4;
-          color:          black;
-      }
-
-    </style>
 
   <template>
 
       <template is="dom-if" if="{{showCompletionCheckbox(assignment, showCompleted)}}">
-          <iron-icon icon="{{getCompletionIcon(assignment)}}" title="{{getCompletionTip(assignment)}}"></iron-icon>
+          <iron-icon id=completion-icon icon="{{getCompletionIcon(assignment)}}" title="{{getCompletionTip(assignment)}}"></iron-icon>
       </template>
 
       <span class="name">
           <template is="dom-if" if="{{assignment.user}}">
-              <span>{{capitalize(assignment.role)}}</span>: <span>{{assignment.user.name}}</span>
+              <span>{{assignment.user.name}}</span>
           </template>
           <template is="dom-if" if="{{assignment.text}}">
               <span>{{assignment.text}}</span>
@@ -56,15 +16,37 @@
       </span>
 
       <template is="dom-if" if="{{showRemover(assignment, removable)}}"><a class="remover" href="#" on-click="remove">×</a></template>
-      <!-- <template if={{showColor}}><span class='color' style="{{ {backgroundColor:tagColor} | styleObject}}"></span></template> -->
+
+      <style>
+
+          :host {
+              font-size:     32px;/* Approximation due to font substitution */
+              font-weight:   700;
+              line-height:   30px;/* Approximation due to font substitution */
+          }
+
+          .remover {
+              color:           #a7b4bb;
+              text-decoration: none;
+              font-weight:     normal;
+          }
+
+          #completion-icon {
+              width:          16px !important;
+              height:         16px !important;
+              vertical-align: -2px !important;
+              background:     #e4e4e4;
+              color:          black;
+          }
+
+      </style>
+
   </template>
 
   <script>
     Polymer({
       is: 'oj-user-tag',
-      behaviors: [
-        Oj.globalExpressions
-      ],
+
       properties: {
         assignment: {
           notify: true,
@@ -75,27 +57,22 @@
           value: false,
           notify: true
         },
-        showColor: {
-            notify: true
-        },
         showCompleted: {
-            notify: true
-        },
-        tagColor: {
             notify: true
         }
       },
+
       assignmentChanged: function () {
         if (this.assignment) {
           if (!this.assignment.user && !this.assignment.text)
             Polymer.dom(this).setAttribute('hidden', '');
           else
             Polymer.dom(this).removeAttribute('hidden');
-          this.className = this.className + ' role-' + this.assignment.role;
           if (this.assignment.user && this.assignment.user.email)
             this.title = this.assignment.user.email;
         }
       },
+
       getCompletionIcon: function (assignment) {
         switch (assignment.reviewer_accept) {
         case true:
@@ -106,6 +83,7 @@
           return '';
         }
       },
+
       getCompletionTip: function (assignment) {
         switch (assignment.reviewer_accept) {
         case true:
@@ -116,17 +94,25 @@
           return 'Review Not Complete';
         }
       },
+
       remove: function (event) {
         event.preventDefault();
         if (this.removable)
           this.fire('remove-user', this.assignment);
       },
+
       showCompletionCheckbox: function (assignment, showCompleted) {
         return showCompleted && assignment.role == 'reviewer' && assignment.user;
       },
+
       showRemover: function (assignment, removable) {
         return removable && assignment.role == 'reviewer' && assignment.user;
-      }
+      },
+
+      behaviors: [
+          Oj.globalExpressions
+      ]
+
     });
   </script>
 </dom-module>
