--- a/app/assets/components/elements/custom-icons.html
+++ b/app/assets/components/elements/custom-icons.html
@@ -1,8 +1,8 @@
 <iron-iconset-svg id="custom-icons" name="custom-icons" size="16">
     <svg>
         <defs>
-            <g id="selected"  ><circle cx="8" cy="8" r="7"></circle></g>
-            <g id="unselected"><circle cx="8" cy="8" r="2"></circle></g>
+            <g id="selected"    class="group" filter="url(#drop-shadow-filter)"><circle cx="8" cy="8" r="7"></circle></g>
+            <g id="unselected"  class="group" filter="url(#drop-shadow-filter)"><circle cx="8" cy="8" r="2"></circle></g>
         </defs>
     </svg>
 </iron-iconset-svg>
