--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -43,9 +43,10 @@
 
           #rhs {
               box-sizing:    border-box;
-              width:         350px;
+              width:         505px;
               height:        100%;
               left:          -3px;
+              background:    #eeeeee;
           }
 
           #rhs-tabs {
