--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
 
   <body unresolved class="fullbleed layout vertical">
     <%= yield %>
+
     <%= render 'layouts/flash' %>
+    <%= render 'layouts/svg_defs' %>
   </body>
 </html>
